data/derived/comb/progs/unify/prog5427.ml.out
Characters 25-28:
  let _ = lastListElement ["1"; "2"; "3";];;
                           ^^^
Error: This expression has type string but an expression was expected of type
         'a list
